--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-jade": "^1.1.0"
+    "gulp-batch": "^1.0.5",
+    "gulp-jade": "^1.1.0",
+    "gulp-watch": "^4.3.10"
   }
 }
