--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "bookshelf": "^0.10.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -14,12 +15,16 @@
     "jade": "~1.11.0",
     "jquery": "^3.1.1",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
+    "sequence": "^3.0.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-batch": "^1.0.5",
     "gulp-jade": "^1.1.0",
-    "gulp-watch": "^4.3.10"
+    "gulp-watch": "^4.3.10",
+    "log4js": "^1.0.1",
+    "path": "^0.12.7"
   }
 }
