--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "browserify": "^13.1.1",
+    "fs": "^0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-batch": "^1.0.5",
     "gulp-jade": "^1.1.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
     "log4js": "^1.0.1",
-    "path": "^0.12.7"
+    "map-stream": "^0.0.6",
+    "path": "^0.12.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
