--- a/package.json
+++ b/package.json
@@ -21,19 +21,29 @@
   },
   "devDependencies": {
     "browserify": "^13.1.1",
+    "browserify-jade": "^1.0.2",
+    "eslint-config-airbnb": "^13.0.0",
     "fs": "^0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-batch": "^1.0.5",
+    "gulp-eslint": "^3.0.1",
     "gulp-jade": "^1.1.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
+    "jadeify": "^4.6.0",
     "log4js": "^1.0.1",
     "map-stream": "^0.0.6",
     "path": "^0.12.7",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  },
+  "browserify": {
+    "transform": [
+      "jadeify"
+    ]
   }
 }
